Try adding margins to fix image display on mobile

--- a/assets/css/custom/home-page.css
+++ b/assets/css/custom/home-page.css
@@ -107,7 +107,9 @@ h2 {
 }
 
 .ios-app-store-badge-image {
+    display: block;
     width: 82%;
+    margin: 0 auto;
 }
 
 .small {
